k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devsu-demo-service
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: devsu-demo-python
